--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: dash
-author: GitHub User
-email: miguel-gonzalez@gmx.de
+author: K0Hack
+email: 
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
