--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: dash
+title: Blog de Hacking
 author: K0Hack
 email: 
 description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Blog Personal de K0Hack de:
+  Hacking Etico // HTB // TryHackMe // Resumenes de Hacking
+  Herramientas para distintas tareas.
 show_excerpts: false # set to true to show excerpts on the homepage
 
 paginate: 1
@@ -25,13 +25,13 @@ dash:
   # generate social links in footer
   # supported colors: green, red, orange, blue, cyan, pink, teal, yellow, indigo, purple
   social_links:
-    - url: https://twitter.com/bitbrain_
+    - url:  
       icon: twitter-square
       color: cyan
-    - url: https://bitbrain.itch.io
+    - url: https://Ki-pro.github.io
       icon: itch-io
       color: red
-    - url: https://github.com/bitbrain
+    - url: https://Ki-pro.github.io
       icon: github-square
       color: purple
 
