--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "show_exerpts:"
 show_excerpts: false # set to true to show excerpts on the homepage
 
 paginate: 1
-paginate_path: "/blog/page:num/"
+paginate_path: "/blog/page:num/2019/04/16/welcome-to-jekyll2.html"
 
 tag_permalink_style: pretty
 tag_page_layout: tag_page
